(fix) [SD-3576] Layout issues when authoring, search and search filter panel are open

--- a/client/app/scripts/superdesk-desks/styles/desks.less
+++ b/client/app/scripts/superdesk-desks/styles/desks.less
@@ -255,6 +255,7 @@
 		}
 		time {
 			color:#999;
+			font-size: 11px;
 		}
 		.text {
 			height: 32px;
